Auto stash before checking out "aditya0shah/master"

--- a/settings.json
+++ b/settings.json
@@ -1,1 +1,1 @@
-{"cooldown_duration_time": 600, "team_number": "5987", "advanced_logging": false}
+{"cooldown_duration_time": 500, "team_number": "1234", "advanced_logging": true}
